--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="box-grid">
             <div class="grid-image">
-              <img src="../Images/pim-chu-z6NZ76_UTDI-unsplash.jpeg" alt="" />
+              <img src="./Images/pim-chu-z6NZ76_UTDI-unsplash.jpeg" alt="" />
             </div>
           </div>
           <div class="box-grid">
@@ -106,7 +106,7 @@
     <section class="feature-fo">
       <div class="image-feat">
         <img
-          src="../Images/retail-shop-owner-mask-social-distancing-shopping.jpg"
+          src="./Images/retail-shop-owner-mask-social-distancing-shopping.jpg"
           alt=""
         />
       </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="image-product">
               <img
-                src="../Images/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
+                src="./Images/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
                 alt=""
               />
             </div>
@@ -153,7 +153,7 @@
             </div>
             <div class="image-product">
               <img
-                src="../Images/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
+                src="./Images/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
                 alt=""
               />
             </div>
@@ -172,7 +172,7 @@
             </div>
             <div class="image-product">
               <img
-                src="../Images/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
+                src="./Images/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
                 alt=""
               />
             </div>
