--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="../Css/necolas.github.io_normalize.css_8.0.1_normalize.css"
     />
-    <link rel="stylesheet" href="../Css/all.min.css" />
+    <link rel="stylesheet" href="./Css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
